# template-django

./: .coveragerc  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
event/: urls.py  views.py
sample/: settings.py  urls.py  views.py
templates/event/: index.html  table.html
templates/sample/: index.html  post.html
templates/smaple/: index.html
tests/: conftest.py
