[tool.poetry]
name = "python-template"
version = "0.0.1"
description = ""
authors = ["mozkzki"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.0.1"
pytest = "7.2.1"
black = "23.1.0"
pytest-cov = "4.0.0"
coverage = "7.1.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
