[tool.poetry]
name = "python-template"
version = "0.0.1"
description = ""
authors = ["mozkzki"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.2.0"
pytest = "7.2.2"
black = "23.3.0"
pytest-cov = "4.0.0"
coverage = "7.2.3"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
